// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParserUtilsV2 findLinks one link: bond 1`] = `
Array [
  Object {
    "alias": undefined,
    "from": Object {
      "fname": "foo",
      "id": "foo",
    },
    "original": "[[bar]]",
    "pos": Object {
      "end": 7,
      "start": 0,
    },
    "to": Object {
      "fname": "bar",
    },
    "type": "wiki",
    "value": "bar",
  },
]
`;

exports[`ParserUtilsV2 replaceLinks fenced code 1`] = `
"\`\`\`
[[bond]]
\`\`\`
"
`;

exports[`ParserUtilsV2 replaceLinks inline code 1`] = `
"\`[[bond]]\`
"
`;

exports[`ParserUtilsV2 replaceLinks multiple 1`] = `
"[[bar]]
[[bar]]
"
`;

exports[`ParserUtilsV2 replaceLinks one 1`] = `
"[[bar]]
"
`;

exports[`ParserUtilsV2 replaceLinks with alias 1`] = `
"[[hero|bar]]
"
`;

exports[`ParserUtilsV2 replaceLinks with offset  1`] = `
"   [[bar]]
"
`;
